<resources>
    <string name="app_name">My Application</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_code">bar code</string>
    <string name="details">More Details</string>
    <string name="keep_reading">read more</string>
    <string name="info">info</string>
    <string name="price">price</string>
    <string name="notes">notes</string>
    <string name="search_bar">search for drugs</string>
    <string name="name">name</string>
    <string name="scientific">scientific</string>
    <string name="concentration">concentration</string>
    <string name="dosageform">dosageform</string>
    <string name="store">store</string>
    <string name="sachet">sachet</string>
    <string name="location">location</string>
    <string name="todo">TODO</string>
    <string name="setting">setting</string>
    <string name="sort">sort</string>
    <string name="all_drugs">all Drugs</string>
    <string name="drugs_i_have">Drugs i have</string>
    <string name="best_selling">best selling</string>
    <string name="sortby">Sort By</string>
    <string name="search_on_sales">search on sales</string>
    <string name="calendar">calendar</string>
    <string name="pharmacy_sales">pharmacy sales</string>
    <string name="month">month</string>
    <string name="sales">sales</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="scan">scan</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="sale">sale</string>
    <string name="analyze">analyze</string>
    <string name="id">id</string>
    <string name="quantity">quantity</string>
    <string name="all_medicines">all medicines</string>
    <string name="medicines_i_have">medicines i have</string>
    <string name="edit">edit</string>
    <string-array name="spinner_sort_by">
        <item>طنوس</item>
        <item>الحكمة</item>
    </string-array>
</resources>