<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view_frgament.FragmentAdd">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/black"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_true"
                    app:tint="@color/white" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img_barcode"
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/barcodetext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_cam_bar_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:elevation="6dp"
                android:focusable="true"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_barcode"
                app:elevation="6dp"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_barcode"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@android:color/white"
                app:useCompatPadding="true" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cam_bar_code">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:hint="@string/name"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/scientific"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/scientific"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/concentration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/concentration"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/scientific"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/dosageform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/dosageform"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/concentration"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/notes"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dosageform"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/store"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/store"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/note"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/sachet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/sachet"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/store"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:hint="@string/location"
                        android:textColor="?attr/colorOnSecondary"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sachet" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <EditText
                android:id="@+id/edt_bar_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:hint="@string/bar_code"
                android:textColor="?attr/colorOnSecondary"
                android:textDirection="anyRtl"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_cam_bar_code"
                app:layout_constraintEnd_toStartOf="@+id/btn_cam_bar_code"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_barcode" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>