<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isEmpty"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view_frgament.FragmentSearch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/search_bar"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textDirection="anyRtl"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toStartOf="@+id/imageBack"
                    app:layout_constraintStart_toStartOf="@+id/remove_text_search"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/remove_text_search"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_close"
                    android:visibility="@{isEmpty?View.VISIBLE:View.GONE,default = gone}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cam_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/cam_search"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_barcode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMedicines"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_search_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:elevation="6dp"
                android:focusable="true"
                android:padding="@dimen/_8sdp"
                android:visibility="@{isEmpty?View.VISIBLE:View.GONE,default = gone}"
                android:src="@drawable/ic_search"
                app:elevation="6dp"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
                app:tint="@android:color/white"
                app:useCompatPadding="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>